@@ -43,17 +43,17 @@ public class AuthoritySource implements FilterInvocationSecurityMetadataSource {
 	/**
 	 * 权限缓存
 	 */
-	private List<Permission> allCache = null;
+	private List<SecurityConfig> allCache = null;
 
 	/**
 	 * 权限缓存(按url区分)
 	 */
-	private Map<String, List<Permission>> urlCache = null;
+	private Map<String, List<SecurityConfig>> urlCache = null;
 
 	/**
 	 * 权限缓存(按url和请求方式区分)
 	 */
-	private Map<String, Map<PermissionTypeEnum, List<Permission>>> urlTypeCache = null;
+	private Map<String, Map<PermissionTypeEnum, List<SecurityConfig>>> urlTypeCache = null;
 
 	/**
 	 * 初始化
@@ -62,40 +62,46 @@ public class AuthoritySource implements FilterInvocationSecurityMetadataSource {
 	 */
 	private void init() {
 		if (allCache == null) {
-			allCache = authorityService.getAllPermissions().list(Permission.class);
+			List<Permission> permissions = authorityService.getAllPermissions().list(Permission.class);
+			allCache = permissions.stream().map((iter) -> {
+				return new SecurityConfig(iter.getName());
+			}).collect(Collectors.toList());
 			if (allCache == null) {
 				throw new RuntimeException("获取所有权限失败!");
 			}
-			urlCache = allCache.stream().collect(Collectors.toMap(Permission::getUrl, iter -> {
-				List<Permission> list = new ArrayList<>();
-				list.add(iter);
+			urlCache = permissions.stream().collect(Collectors.toMap(Permission::getUrl, iter -> {
+				List<SecurityConfig> list = new ArrayList<>();
+				list.add(new SecurityConfig(iter.getName()));
 				return list;
-			}, (List<Permission> a, List<Permission> b) -> {
+			}, (List<SecurityConfig> a, List<SecurityConfig> b) -> {
 				a.addAll(b);
 				return a;
 			}));
 			urlTypeCache = new HashMap<>();
-			for (Entry<String, List<Permission>> entry : urlCache.entrySet()) {
-				List<Permission> valueList = entry.getValue() == null ? new ArrayList<>() : entry.getValue();
-				Map<PermissionTypeEnum, List<Permission>> valueMap = new HashMap<>();
+			List<String> urls = permissions.stream().map(Permission::getUrl).distinct().collect(Collectors.toList());
+			for (String url : urls) {
+				Map<PermissionTypeEnum, List<SecurityConfig>> typeMap = new HashMap<>();
 				for (PermissionTypeEnum type : PermissionTypeEnum.values()) {
 					if (type != PermissionTypeEnum.ALL) {
-						List<Permission> subList = valueList.stream().filter((iter) -> {
-							return iter.getType().equals(type.getVal());
+						List<SecurityConfig> configs = permissions.stream().filter((iter) -> {
+							return iter.getUrl().equals(url) && iter.getType().equals(type.getVal());
+						}).map((iter) -> {
+							return new SecurityConfig(iter.getName());
 						}).collect(Collectors.toList());
-						if (subList == null) {
-							subList = new ArrayList<>();
-						}
-						valueMap.put(type, subList);
+						typeMap.put(type, configs);
 					}
 				}
-				List<Permission> allPermissions = valueList.stream().filter((iter) -> {
-					return iter.getType().equals(PermissionTypeEnum.ALL.getVal());
+				List<SecurityConfig> allConfigs = permissions.stream().filter((iter) -> {
+					return iter.getUrl().equals(url) && iter.getType().equals(PermissionTypeEnum.ALL.getVal());
+				}).map((iter) -> {
+					return new SecurityConfig(iter.getName());
 				}).collect(Collectors.toList());
-				for (List<Permission> permissions : valueMap.values()) {
-					permissions.addAll(allPermissions);
+				for (Entry<PermissionTypeEnum, List<SecurityConfig>> entry : typeMap.entrySet()) {
+					List<SecurityConfig> configs = entry.getValue();
+					configs.addAll(allConfigs);
+					entry.setValue(configs.stream().distinct().collect(Collectors.toList()));
 				}
-				urlTypeCache.put(entry.getKey(), valueMap);
+				urlTypeCache.put(url, typeMap);
 			}
 		}
 	}
@@ -115,33 +121,27 @@ public class AuthoritySource implements FilterInvocationSecurityMetadataSource {
 			// 根据不同请求方式获取对应权限
 			switch (HttpMethod.resolve(invocation.getHttpRequest().getMethod())) {
 				case GET : {
-					attributes = urlTypeCache.get(url).get(PermissionTypeEnum.GET).stream().map((iter) -> {
-						return new SecurityConfig(iter.getName());
-					}).collect(Collectors.toList());
+					attributes = urlTypeCache.get(url).get(PermissionTypeEnum.GET).stream().collect(Collectors
+						.toList());
 					break;
 				}
 				case POST : {
-					attributes = urlTypeCache.get(url).get(PermissionTypeEnum.POST).stream().map((iter) -> {
-						return new SecurityConfig(iter.getName());
-					}).collect(Collectors.toList());
+					attributes = urlTypeCache.get(url).get(PermissionTypeEnum.POST).stream().collect(Collectors
+						.toList());
 					break;
 				}
 				case DELETE : {
-					attributes = urlTypeCache.get(url).get(PermissionTypeEnum.DELETE).stream().map((iter) -> {
-						return new SecurityConfig(iter.getName());
-					}).collect(Collectors.toList());
+					attributes = urlTypeCache.get(url).get(PermissionTypeEnum.DELETE).stream().collect(Collectors
+						.toList());
 					break;
 				}
 				case PUT : {
-					attributes = urlTypeCache.get(url).get(PermissionTypeEnum.PUT).stream().map((iter) -> {
-						return new SecurityConfig(iter.getName());
-					}).collect(Collectors.toList());
+					attributes = urlTypeCache.get(url).get(PermissionTypeEnum.PUT).stream().collect(Collectors
+						.toList());
 					break;
 				}
 				default : {
-					attributes = urlCache.get(url).stream().map((iter) -> {
-						return new SecurityConfig(iter.getName());
-					}).collect(Collectors.toList());
+					attributes = urlCache.get(url).stream().collect(Collectors.toList());
 					break;
 				}
 			}
@@ -162,9 +162,7 @@ public class AuthoritySource implements FilterInvocationSecurityMetadataSource {
 	public Collection<ConfigAttribute> getAllConfigAttributes() {
 		init();
 		Collection<ConfigAttribute> attributes = new ArrayList<>();
-		attributes.addAll(allCache.stream().map((iter) -> {
-			return new SecurityConfig(iter.getName());
-		}).collect(Collectors.toList()));
+		attributes.addAll(allCache.stream().collect(Collectors.toList()));
 		return attributes;
 	}
 
